--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 <div class="container">
   <!-- <div class="img_part"> -->
-   <img src="images/img2.jpeg" >
-    <h1>Shukri Abdullahi</h1>
+   <img src="images/img2.jpeg" ><br>
+    <h1>Shukri Abdullahi</h1><br>
     <h4>Mogadishu , Soomalia</h4><br>
     <p>"Front-end developer and avid reader."</p>
   <!-- </div> -->
